car-owner-service/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-owner-service
spec:
  selector:
    app: car-owner-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: car-owner-ui
spec:
  selector:
    app: car-owner-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
